@@ -1,3 +1,8 @@
+Sun Jul 14 00:36:03 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (DIGSPERLONG): Unused macro removed.
+	  (DIGSPERLL): Ditto.
+
 Sun Jul 14 00:32:51 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (rb_big_aref): Less scan when the number is negative.
